# InterpCopy

./: .env.example  .gitignore  README.md  hf_test_prompts.txt  pyproject.toml
configs/: 405b_lora.yaml  70b_lora.yaml  8b_lora.yaml
recipes_dcp/: lora_finetune_distributed_dcp.py
sbatch/: convert_hf_to_dcp.sbatch  dry_405b.sbatch  dry_and_gen_405b.sbatch  finetune_405b.sbatch  gen_405b_base.sbatch  gen_405b_base_pure.sbatch  gen_405b_lora.sbatch  gen_70b_base.sbatch  gen_70b_base_pure.sbatch  gen_70b_lora.sbatch  gen_8b_base.sbatch  gen_8b_base_pure.sbatch  gen_8b_lora.sbatch  smoke_8b.sbatch  smoke_8b_1gpu.sbatch  smoke_8b_2gpu.sbatch  smoke_8b_b40.sbatch  smoke_dcp_8b.sbatch  train.sbatch
scripts/: _diag_adapter_sanity.py  convert_hf_to_dcp.py  download_weights.sh  exp01_layer_diff_base_vs_instruct.py  exp02_atwood_features.py  exp03_atwood_features_base_vs_instruct.py  patch_vllm_timeout.sh  run_memeval.py  setup_env.sh  sitecustomize.py
src/interpcopy/: datasets.py  eval.py  generate.py
